// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Description Component does not render when content is empty 1`] = `
<div>
  


</div>
`;

exports[`Field Description Component renders with additional attributes and classes 1`] = `
<div>
  


  <div
    class="ct-field-description ct-theme-light ct-field-description--regular custom-modifier"
    data-test="true"
  >
    This is a description
  </div>
</div>
`;

exports[`Field Description Component renders with custom theme and size 1`] = `
<div>
  


  <div
    class="ct-field-description ct-theme-dark ct-field-description--large "
  >
    This is a description
  </div>
</div>
`;

exports[`Field Description Component renders with default values 1`] = `
<div>
  


  <div
    class="ct-field-description ct-theme-light ct-field-description--regular "
  >
    This is a description
  </div>
</div>
`;
